[package]
name = "raylib-sys"
version = "5.5.0"
authors = ["DeltaPHC <phclem@protonmail.com>"]
license = "Zlib"
description = "Raw FFI bindings for Raylib"
documentation = "https://docs.rs/raylib-sys"
repository = "https://github.com/raylib-rs/raylib-rs"
keywords = ["bindings", "raylib", "gamedev", "ffi"]
categories = ["external-ffi-bindings"]
edition = "2018"
exclude = ["raylib/examples/*", "raylib/projects/*", "raylib/templates/*"]

[dependencies]
imgui = { version = "0.12.0", optional = true, features = [] }
imgui-sys = { version = "0.12.0", optional = true }

[build-dependencies]
cmake = "0.1.51"
cc = "1.0"
bindgen = "0.70"

[features]
default = ["raudio", "screenshot", "gif", "custom_frame_control"]
minimal = ["raudio"] # only raudio
# Build Raylib headless for docs. Up to you to link
nobuild = []

# Build for wayland on linux. Should fix #119
wayland = []

# OpenGL stuff, intended for fixing #122
opengl_43 = []
opengl_33 = []
opengl_21 = []
# opengl_11 = [] I couldn't get this one working, the others were fine in my limited testing (unsure about wayland compatibility)
opengl_es_20 = []
opengl_es_30 = []
sdl = []

screenshot = []
gif = []

# config.h's SUPPORT_CUSTOM_FRAME_CONTROL
custom_frame_control = []

# While the functions may be binded, they are **not** compiled without this feature.
raudio = []

# ImGui support
imgui = ["dep:imgui", "dep:imgui-sys"]
